# tg2api

./: .env.example  .gitignore  IMAGE_SEND_GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  send_image_test.py  send_test.py
app/: api.py  config.py  logging_config.py  models.py  telegram.py
app/pubsub/: __init__.py  loader.py  publisher.py  subscriber.py
docker/: Dockerfile
openspec/changes/add-save-to-local-subscriber/: design.md  proposal.md  tasks.md
openspec/changes/add-save-to-local-subscriber/specs/csv-local-storage/: spec.md
openspec/changes/archive/2026-02-21-add-docker-logging-pubsub/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-add-docker-logging-pubsub/specs/docker-deployment/: spec.md
openspec/changes/archive/2026-02-21-add-docker-logging-pubsub/specs/logging/: spec.md
openspec/changes/archive/2026-02-21-add-docker-logging-pubsub/specs/pubsub-forwarding/: spec.md
openspec/changes/archive/2026-02-22-add-sentiment-api-subscriber/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-22-add-sentiment-api-subscriber/specs/sentiment-api-forwarding/: spec.md
openspec/specs/docker-deployment/: spec.md
openspec/specs/logging/: spec.md
openspec/specs/pubsub-forwarding/: spec.md
openspec/specs/sentiment-api-forwarding/: spec.md
subscribers/: example_logger.py.bak  news_rater.py  saveToLocal.py  sentiment_api.py.bak  webhook_forwarder.py.bak
